# env-to-array

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs
