[package]
name = "env_to_array"
version = "0.3.0"
edition = "2021"
authors = ["cyphersnake <cyphersnake@pm.me>"]
repository = "https://github.com/cyphersnake/env_to_array"
description = "Auxiliary crate for collecting arrays in different encodings from string constant & environment variables"
license = "MIT"

[lib]
proc-macro = true

[features]
default = ["bs58", "bs64", "bs32", "bs85", "hex"]
bs58 = ["dep:bs58"]
bs64 = ["dep:base64"]
hex = ["dep:hex"]
bs32 = ["dep:base32"]
bs85 = ["dep:base85"]

[dependencies]
base32 = { version = "0.4.0", optional = true }
base64 = { version = "0.13.1", optional = true }
base85 = { version = "1.1.1", optional = true }
bs58 = { version = "0.4.0", optional = true }
hex = { version = "0.4.3", optional = true }

itertools = "0.10.5"
proc-macro2 = "1.0.47"
syn = { version = "1.0.103", features = ["full"] }
